--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "career-readiness-assessment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://paul-thehuman.github.io/ai-career-assessment",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -11,6 +12,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -33,5 +36,6 @@
   "devDependencies": {
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.0.0"
+    "gh-pages": "^6.1.1"
   }
 }
