--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "^3.0.0",
     "gh-pages": "^6.1.1"
   }
 }
