Use icons for social share buttons

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://paul-thehuman.github.io/ai-career-assessment",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
