--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "career-readiness-assessment",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://paul-thehuman.github.io/ai-career-assessment",
+  "homepage": "https://lead-assessment.thehumanco.org",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
